# zakuro

./: .clang-format-ignore  .gitignore  CHANGES.md  CLAUDE.md  CMakeLists.txt  DEPS  NOTICE  README.md  VERSION  buildbase.py  canary.py  hatch_build.py  pyproject.toml  run.py  test_json_prepared.cpp  zakuro_stats_20250727_132530_701.ddb.wal
.github/actions/download/: action.yml
.github/actions/download-binary/: action.yml
.github/workflows/: build.yml  claude.yml  e2e-test.yml
cmake/: FindBlend2D.cmake  FindDuckDB.cmake
doc/: BUILD.md  DUCKDB.md  FAQ.md  RPC.md  SUPPORT.md  UI.md  USE.md
python/: .env.template
python/tests/: .gitignore  conftest.py  test_zakuro_duckdb.py  zakuro.py
python/zakuro/: __init__.py
script/: apt_install_x86_64.sh  docker_run.sh  get_webrtc.sh  yum_install_x86_64.sh
src/: binary_pool.h  duckdb_stats_writer.cpp  duckdb_stats_writer.h  duckdb_utils.cpp  duckdb_utils.h  dynamic_h264_video_encoder.cpp  dynamic_h264_video_encoder.h  embedded_binary.cpp  embedded_binary.generated.h.in  embedded_binary.generated.priv.template.h  embedded_binary.generated.template.h  embedded_binary.h  enable_media_with_fake_call.cpp  enable_media_with_fake_call.h  fake_audio_key_trigger.h  fake_network_call_factory.cpp  fake_network_call_factory.h  fake_video_capturer.cpp  fake_video_capturer.h  http_proxy.cpp  http_proxy.h  http_server.cpp  http_server.h  json_rpc.cpp  json_rpc.h  main.cpp  nop_video_decoder.cpp  nop_video_decoder.h  random.h  scenario_player.h  sctp_transport_factory.cpp  sctp_transport_factory.h  url_parts.cpp  url_parts.h  util.cpp  util.h  virtual_client.cpp  virtual_client.h  voice_number_reader.h  wav_reader.cpp  (+16 more)
src/game/: game_audio.h  game_key.h  game_key_core.h  game_kuzushi.h
src/mac_helper/: mac_capturer.mm
src/rtc/: device_video_capturer.h  dynamic_h264_video_encoder.cpp  dynamic_h264_video_encoder.h  fake_network_call_factory.cpp  fake_network_call_factory.h  nop_video_decoder.cpp  nop_video_decoder.h  peer_connection_observer.h  rtc_connection.cpp  rtc_connection.h  rtc_manager.cpp  rtc_manager.h  rtc_ssl_verifier.cpp  scalable_track_source.cpp  scalable_track_source.h  sctp_transport_factory.cpp  sctp_transport_factory.h  software_video_encoder.cpp  software_video_encoder.h  zakuro_audio_device_module.cpp  zakuro_audio_device_module.h
src/sora/: sora_client.cpp  sora_client.h  sora_data_channel.h  sora_data_channel_on_asio.h  sora_server.cpp  sora_server.h  sora_session.cpp  sora_session.h
src/v4l2_video_capturer/: v4l2_video_capturer.cpp  v4l2_video_capturer.h
test/: .env.template  conftest.py  pyproject.toml  test_rpc.py  test_zakuro.py  test_zakuro_duckdb.py  zakuro.py
